# tauri-piano-sequencer

./: .gitignore  AI_ARCHITECTURE.md  AI_MELODY_GENERATION_TODO.md  CLAUDE.md  PHASE_5_TESTING_CHECKLIST.md  README.md  SHADCN_MIGRATION.md  package-lock.json  package.json  tauri_piano_specs.md
.claude/commands/: clean-commit.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/samples/: README.md
src-tauri/src/: ai_client.rs  ai_models.rs  ai_prompts.rs  api_key_storage.rs  audio.rs  lib.rs  main.rs  sample_player.rs
src/components/: AIMelodyGenerator.tsx  AISettings.tsx  KeyPressNotification.tsx  KeyboardGuide.tsx  Note.tsx  PianoKeys.tsx  PianoRoll.tsx  Playhead.tsx  ScaleSelector.tsx  SettingsPanel.tsx  ThemeToggle.tsx  TimeRuler.tsx  Toast.tsx  TrackPanel.tsx  TransportControls.tsx  VisualPiano.tsx
src/context/: ThemeContext.tsx
src/hooks/: useAI.ts  useNotes.ts  usePlayback.ts  useToast.ts  useTracks.ts
src/types/: index.ts
src/utils/: aiMelodyUtils.ts  costEstimator.ts  errorParser.ts  keyboardLayouts.ts  localStorage.ts  midiExporter.ts  midiParser.ts  noteUtils.ts  projectUtils.ts  rateLimiter.ts  scaleUtils.ts
