[package]
name = "piano-player"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "piano_player_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rodio = { version = "0.19", features = ["wav"] }
cpal = "0.15"
chrono = "0.4"
lru = "0.12"
# AI melody generation dependencies
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
validator = { version = "0.18", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
base64 = "0.22"
aes-gcm = "0.10"
rand = "0.8"
async-trait = "0.1"
machine-uid = "0.5"
uuid = { version = "1.11", features = ["v4"] }

